--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+/.idea/
 # dependencies
 /node_modules
 
@@ -18,6 +18,7 @@ yarn-error.log*
 
 # env files
 .env*
+/server/.venv/
 
 # vercel
 .vercel
